--- a/src/main/resources/es/solvam/proyectojavafx/home-view.fxml
+++ b/src/main/resources/es/solvam/proyectojavafx/home-view.fxml
@@ -3,10 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="es.solvam.proyectojavafx.controlador_vistas.HomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.solvam.proyectojavafx.controlador_vistas.HomeController">
    <children>
       <AnchorPane prefHeight="62.0" prefWidth="600.0" style="-fx-background-color: #42cbf5;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -19,7 +18,7 @@
                      </image>
                   </ImageView>
                   <Separator prefWidth="200.0" visible="false" />
-                  <ImageView fx:id="imGuardar" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imGuardar" fitHeight="50.0" fitWidth="50.0" onMouseClicked="#bthGuardarClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@imagenes/save.png" />
                      </image>
@@ -35,6 +34,41 @@
             </HBox>
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="103.0" prefHeight="329.0" prefWidth="600.0" style="-fx-background-color: #42cbf5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <AnchorPane layoutY="103.0" prefHeight="329.0" prefWidth="600.0" style="-fx-background-color: #42cbf5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <Label layoutX="18.0" layoutY="48.0" text="Información Personal">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Separator layoutX="208.0" layoutY="60.0" prefHeight="3.0" prefWidth="375.0" style="-fx-border-color: #000;" />
+            <Label layoutX="18.0" layoutY="83.0" text="DNI: " />
+            <Label layoutX="18.0" layoutY="117.0" text="Nombre:" />
+            <Label layoutX="18.0" layoutY="154.0" text="Teléfono:" />
+            <Label layoutX="18.0" layoutY="190.0" text="Fecha de Nacimineto" />
+            <Label layoutX="349.0" layoutY="190.0" text="Ocupación:" />
+            <Label layoutX="15.0" layoutY="235.0" text="Intereses:" />
+            <TextField fx:id="txtDni" layoutX="56.0" layoutY="79.0" />
+            <TextField fx:id="txtNombre" layoutX="74.0" layoutY="113.0" prefHeight="25.0" prefWidth="382.0" />
+            <TextField fx:id="txtTelefono" layoutX="81.0" layoutY="150.0" />
+            <DatePicker fx:id="dtFechaNacimiento" layoutX="143.0" layoutY="186.0" />
+            <ComboBox fx:id="cbOcupacion" layoutX="423.0" layoutY="186.0" prefWidth="150.0" />
+            <Label layoutX="265.0" layoutY="154.0" text="Sexo:" />
+            <RadioButton fx:id="rbHombre" layoutX="304.0" layoutY="154.0" mnemonicParsing="false" text="Hombre">
+               <toggleGroup>
+                  <ToggleGroup fx:id="sexo" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="rbMujer" layoutX="380.0" layoutY="154.0" mnemonicParsing="false" text="Mujer" toggleGroup="$sexo" />
+            <CheckBox fx:id="chTecnologia" layoutX="94.0" layoutY="235.0" mnemonicParsing="false" text="Tecnología" />
+            <CheckBox fx:id="chDiseno" layoutX="205.0" layoutY="235.0" mnemonicParsing="false" text="Diseño" />
+            <CheckBox fx:id="chConsultoria" layoutX="293.0" layoutY="235.0" mnemonicParsing="false" text="Consultoría" />
+            <CheckBox fx:id="chFormacion" layoutX="396.0" layoutY="235.0" mnemonicParsing="false" text="Formación" />
+            <ImageView fx:id="imFoto" fitHeight="112.0" fitWidth="113.0" layoutX="473.0" layoutY="70.0" onMouseClicked="#onImFotoClicked" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@imagenes/user.png" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
    </children>
 </AnchorPane>
